--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 .workableArea {
-  -webkit-app-region: drag;
+  -webkit-app-region: no-drag;
   font-family: sans-serif;
   position: absolute;
   left: 0%;
@@ -13,11 +13,40 @@ body {
   width: 320px;
   height: 480px;
   padding: 0px;
-  background-color: gray;
+  background-color: black;
   border-radius: 10px;
 }
 
-#testItem {
+.topBar {
+  -webkit-app-region: drag;
+  background-color: red;
+  position: relative;
+  left: 0%;
+  top: 0%;
+  width: 320px;
+  height: 30px;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.itemContainer {
+  position: relative;
+  left: 0%;
+  top: 0%;
+  width: 320px;
+  height: 450px;
+  border-top: 10px;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.testItem {
+  position: relative;
+  left: 10px;
+  top: 10px;
   font-size: 16px;
+  width: 300px;
+  height: 90px;
+  outline-offset: 10px;
+  border-radius: 10px;
+  background-color: #222222;
   color: white;
 }
