--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@ body {
 
 .itemContainer {
   position: relative;
+  overflow-y: auto;
   left: 0%;
   top: 0%;
   width: 320px;
@@ -38,15 +39,26 @@ body {
   border-radius: 0px 0px 10px 10px;
 }
 
-.testItem {
+.linkItem {
   position: relative;
   left: 10px;
   top: 10px;
   font-size: 16px;
   width: 300px;
   height: 90px;
-  outline-offset: 10px;
+  margin-bottom: 10px;
   border-radius: 10px;
   background-color: #222222;
   color: white;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #222222;
+    border-radius: 10px;
 }
