--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Shanti', sans-serif;
 }
 
-.workableArea {
+#workableArea {
   -webkit-app-region: no-drag;
   font-family: sans-serif;
   position: absolute;
@@ -18,15 +18,39 @@ body {
   border-radius: 10px;
 }
 
-.topBar {
+#topBar {
   -webkit-app-region: drag;
-  background-color: red;
+  background-color: black;
   position: relative;
   left: 0%;
   top: 0%;
   width: 320px;
   height: 30px;
   border-radius: 10px 10px 0px 0px;
+}
+
+#appName {
+  position: relative;
+  width: 25%;
+  height: 100%;
+  left: 1.25%;
+  font-family: 'Shanti', sans-serif;
+  font-size: 24px;
+  color: red;
+}
+
+#exitApp {
+  position: absolute;
+  left: 292px;
+  top: 4px;
+  width: 24px;
+  height: 24px;
+}
+
+#exitApp img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .itemContainer {
@@ -64,27 +88,29 @@ body {
   to {opacity: 1;}
 }
 
-.genericItem #descriptionText {
-  position: relative;
-  left: 20px;
-  top: 20px;
-  color: blue;
+.genericItem .descriptionText {
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  color: red;
 }
 
-.genericItem #descriptionText {
-  position: relative;
-  left: 100px;
-  top: 10px;
-  color: blue;
+.genericItem .imageText {
+  position: absolute;
+  width: 50px;
+  height: 20px;
+  top: 5px;
+  left: 95px;
+  color: red;
 }
 
-.genericItem #imagePreview {
+.genericItem .imagePreview {
   object-fit: none;
-  position: relative;
+  position: absolute;
   left: 0px;
   top: 0px;
   width: 90px;
-  height: 100%;
+  height: 90px;
   border-radius: 10px 0px 0px 10px;
 }
 
