--- a/main.css
+++ b/main.css
@@ -88,6 +88,11 @@ body {
   to {opacity: 1;}
 }
 
+@keyframes fadeout {
+  from {opacity: 1;}
+  to {opacity: 0;}
+}
+
 .genericItem .descriptionText {
   position: absolute;
   left: 5px;
