--- a/main.css
+++ b/main.css
@@ -108,13 +108,13 @@ body {
   position: absolute;
   left: 5px;
   top: 5px;
-  color: red;
+  color: rgb(255, 128, 128);
 }
 
 .genericItem .descriptionText {
   position: absolute;
   left: 5px;
-  top: 20px;
+  top: 25px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
@@ -138,7 +138,7 @@ body {
   height: 20px;
   top: 5px;
   left: 95px;
-  color: red;
+  color: rgb(255, 128, 128);
 }
 
 .genericItem .copyButton {
@@ -171,11 +171,11 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 3px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #222222;
+    background: #5f5f5f;
     border-radius: 10px;
 }
